management of login and signup
