# backend/src/controllers/user.js
@@ -4,8 +4,8 @@ const has = require('has-keys')
 const CodeError = require('../util/CodeError.js')
 const bcrypt = require('bcrypt')
 const jws = require('jws')
-require('mandatoryenv').load(['TOKENSECRET'])
-const { TOKENSECRET } = process.env
+require('mandatoryenv').load(['ACCESS_TOKEN_SECRET'])
+const { ACCESS_TOKEN_SECRET } = process.env
 
 function validPassword (password) {
   return /^(?=.*[\d])(?=.*[A-Z])(?=.*[a-z])(?=.*[!@#$%^&*])[\w!@#$%^&*]{8,}$/.test(password)
@@ -21,8 +21,8 @@ module.exports = {
     const user = await userModel.findOne({ where: { email } })
     if (user) {
       if (await bcrypt.compare(password, user.passhash)) {
-        const token = jws.sign({ header: { alg: 'HS256' }, payload: email, secret: TOKENSECRET })
-        res.json({ status: true, message: 'Login/Password ok', token })
+        const token = jws.sign({ header: { alg: 'HS256' }, payload: email, secret: ACCESS_TOKEN_SECRET })
+        res.json({ status: true, message: 'Login/Password ok', token, name: user.name})
         return
       }
     }
@@ -34,7 +34,6 @@ module.exports = {
     // #swagger.parameters['obj'] = { in: 'body', description:'Name and email', schema: { $name: 'John Doe', $email: 'John.Doe@acme.com', $password: '1m02P@SsF0rt!'}}
     if (!has(req.body, ['name', 'email', 'password'])) throw new CodeError('You must specify the name and email', status.BAD_REQUEST)
     const { name, email, password } = req.body
-    console.log(req.body)
     if (!validPassword(password)) throw new CodeError('Weak password!', status.BAD_REQUEST)
     await userModel.create({ name, email, passhash: await bcrypt.hash(password, 2) })
     res.json({ status: true, message: 'User Added' })
