# backend/src/routes/messages.js
@@ -1,6 +1,9 @@
 const router = require('express').Router();
 const Message = require('../models/Message');
 const User = require('../models/users');
+const jws = require('jws')
+require('mandatoryenv').load(['ACCESS_TOKEN_SECRET'])
+const { ACCESS_TOKEN_SECRET } = process.env
 
 router.get('/:symbol', async (req, res) => {
     const symbol = req.params.symbol;
@@ -18,10 +21,28 @@ router.get('/:symbol', async (req, res) => {
 router.post('/:symbol', async (req, res) => {
     const symbol = req.params.symbol;
     const message = req.body;
-    const user = await User.findOne({ where: { email: message.userMail } });
+
+    const authHeader = req.headers.authorization;
+    const token = authHeader && authHeader.split(' ')[1];
+
+    if (!token) {
+        res.status(401).json({ error: 'Token not provided' });
+        return;
+    }
+
+    let decodedToken;
+    try {
+        decodedToken = jws.decode(token);
+    } catch (error) {
+        console.error('Invalid token');
+        return;
+    }
+    const email = decodedToken.payload;
+
+    const user = await User.findOne({ where: { email: email } });
 
     if (!user) {
-        res.status(400).json({ error: 'User not found' });
+        res.status(402).json({ error: 'User not found' });
         return;
     }
 
@@ -36,7 +57,7 @@ router.post('/:symbol', async (req, res) => {
         const newMessage = await Message.create({
             symbol: symbol,
             content: message.text,
-            userMail: message.userMail,
+            userMail: user.email,
             // Add other fields as necessary
         });
 
